updates late October 2019

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -312,7 +312,8 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-\years{2019}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In Proceedings of the New Interfaces for Musical Expression (NIME ’19). Porto Alegre, Brazil. pp. 216–221.\\
+\years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In Proceedings of the Web Audio Conference 2019 (WAC ’19). Trondheim, Norway.\\
+\years{2019a}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. (2019) "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In Proceedings of the New Interfaces for Musical Expression (NIME ’19). Porto Alegre, Brazil. pp. 216–221.\\
 \years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
 \years{2018e}Pauwels, J., \textbf{Xambó, A.}, Roma, G., Barthet, M. Fazekas, G. (2018) "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
 \years{2018d}\textbf{Xambó, A.}, Pauwels, J., Roma, G., Barthet, M. Fazekas, G. (2018) "Jam with Jamendo: Querying a Large Music Collection by Chords from a Learner’s Perspective". In Proceedings of Audio Mostly 2018: Sound in Immersion and Emotion (AM '18). Wrexham, United Kingdom. \\
@@ -517,6 +518,7 @@ Candidate’s Share: 50\% (\$1,650)
 
 \subsection*{Collaborative Performances}
 \noindent
+\years{2018c}Brandtsegg, Ø., \textbf{Xambó, A.}, Engum, T., Bergsland, A., Waadeland, C.H. (December 4, 2019). “Trondheim EMP Repository processing". \emph{Web Audio Conference 2019}. Rockheim, Trondheim, Norway.\\
 \years{2018c}Brown, N., Chudy, M., Dobson, L., Hoel, A.M., Ikkache, L., Pase, T., Schroeder, F., Stolfi, A., Wilkie, S., \textbf{Xambó, A.} (November 22, 2018). “Transmusicking II". Sonic Arts Research Center, Queen's University Belfast. Belfast, Northern Ireland.\\
 \years{2018b}Weisling, A., \textbf{Xambó, A.} (June 5, 2018). “Beckon". \emph{NIME '18}. Moss Arts Center: Anne and Ellen Fife Theatre. Blacksburg, VA, USA.\\
 \years{2018a}Weisling, A., \textbf{Xambó, A.} (March 20, 2018). “Beacon". \emph{TEI '18}. Kulturhuset. Stockholm, Sweden.\\
@@ -531,7 +533,7 @@ Candidate’s Share: 50\% (\$1,650)
 \section*{Mastering (other's work)}
 \noindent
 
-\years{2018}\emph{Noiselets} [FLAC/MP3 files]. Barcelona: Carpal Tunnel.
+\years{2018}\emph{Noiselets} [FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\[2cm]%hack
 
 \section*{Other Creative Products}
 \noindent
@@ -610,16 +612,22 @@ Collaborators: Urtzi Grau (curator), Ana Otero (artistic director).
 \subsection*{Graduate Courses}
 \noindent
 
+\years{10/2019}Course: \emph{Human-Computer Interaction Lectures (2nd edition)} (8 h). \# Students: $\sim$14. \\
+Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
+\years{10/2019}Course: \emph{Physical Computing Workshop (2nd edition)} (28 h). \# Students: $\sim$14. \\
+Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
+Role: Creation of syllabus, creation of content, instruction and assessment.\\
 \years{1/2019}Course: \emph{MCT4046 Sonification and Sound Design} (58 h). \# Students: $\sim$10. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction, coordination of guest lectures, and assessment.\\
 \years{1/2019}Course: \emph{MCT4048 Audio Programming} (58 h). \# Students: $\sim$11. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
-\years{10/2018}Course: \emph{Human-Computer Interaction} (8 h). \# Students: $\sim$15. \\
+\years{10/2018}Course: \emph{Human-Computer Interaction Lectures} (8 h). \# Students: $\sim$15. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.\\
-\years{10/2018}Course: \emph{Physical Computing} (28 h). \# Students: $\sim$15. \\
+\years{10/2018}Course: \emph{Physical Computing Workshop} (28 h). \# Students: $\sim$15. \\
 Master of Music, Communication and Technology (MCT), Norwegian University of Science and Technology (NTNU), Trondheim, Norway.\\ 
 Role: Creation of syllabus, creation of content, instruction and assessment.
 
@@ -743,7 +751,7 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \noindent
 
 \years{2002}Co-Founder and Member of b4ng, a multidisciplinary collective in search of new forms of audiovisual communication. Barcelona.\\
-\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.\\[1.3cm]%hack
+\years{1998--2000}Co-Founder and Member of the experimental video collective jesus13. Barcelona.\\%[1.3cm]%hack
 
 %\hrule
 \section*{Professional Activities}
