updates early January 2020

--- a/Xambo.CV.tex
+++ b/Xambo.CV.tex
@@ -81,6 +81,7 @@ bookmarks, colorlinks, breaklinks,
 
 % CUSTOM
 \usepackage{microtype}
+\usepackage{eurosym}
 %\hyphenpenalty 10000
 %\exhyphenpenalty 1000
 %\widowpenalty 10000
@@ -92,25 +93,24 @@ bookmarks, colorlinks, breaklinks,
 \begin{document}
 {\Huge Anna Xambó}\\[0.1cm]
 \textsc{BA, MA, MSc, PhD}\\[0.9cm]
-\emph{Associate Professor in Music Technology}\\
-Department of Music\\
-Norwegian University of Science and Technology (NTNU)\\
-7491 Trondheim (Norway)\\[.2cm]
+\emph{Senior Lecturer in Music and Audio Technology}\\
+School of Computer Science and Informatics\\
+Faculty of Computing, Engineering and Media\\
+De Montfort University (DMU)\\
+Clephan Building \\
+De Montfort University\\
+Leicester LE1 9BH United Kingdom\\[.2cm]
 %\textsc{phone}: \texttt{(+44) (0) 737-879-6645}\\
-\textsc{email}: \href{mailto:anna.xambo@ntnu.no}{anna.xambo@ntnu.no}\\
+\textsc{email}: \href{mailto:anna.xambo@dmu.ac.uk}{anna.xambo@dmu.ac.uk}\\
 \textsc{webpage}: \href{http://annaxambo.me/}{annaxambo.me}\\ 
 
 %%\hrule
 \section*{Current Academic Roles}
----\emph{Associate Professor in Music Technology}, Department of Music, NTNU, Trondheim, Norway.\\
----\emph{Master of Music, Communication and Technology (MCT) Programme Study Leader}, Department of Music, NTNU.\\
----\emph{MCT Programme Council Leader}, Department of Music, NTNU.\\
----\emph{Chair of the Women Nordic Music Technology} (WoNoMute) organization, Department of Music, NTNU.\\
----\emph{General Co-Chair of the Web Audio Conference 2019}, Department of Music, NTNU.\\
----\emph{Sponsorship Chair \& Program Co-Chair of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
----\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
+---\emph{Senior Lecturer in Music and Audio Technology}, School of Computer Science and Informatics, Faculty of Computing, Engineering and Media, DMU, Leicester, UK.\\
 ---\emph{ Associate Fellow}, Higher Education Academy, United Kingdom.\\
----\emph{Programme Committee Member}, ACM Tangible Embedded and Embodied Interaction 2020 Conference, Sydney, Australia.\\ 
+---\emph{Program Co-Chair of the International Conference of Live Interfaces 2020}, Department of Music, NTNU.\\
+---\emph{Poster Chair of the 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\
+---\emph{Women in NIME (WiNIME) officer}, International Conference of New Interfaces for Musical Expression.\\
 ---\emph{Programme Committee Member}, Tenth Workshop on Ubiquitous Music, Porto Seguro, Brazil.
 
 %%\hrule
@@ -163,7 +163,8 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 %%\hrule
 \section*{Employment}
 \noindent
-\years{08/2018--present}\textsc{Associate Professor in Music Technology}. Department of Music, NTNU. \\
+\years{01/2020--present}\textsc{Senior Lecturer in Music and Audio Technology}. School of Computer Science and Informatics, Faculty of Computing, Engineering and Media, DMU. \\
+\years{08/2018--12/2019}\textsc{Associate Professor in Music Technology}. Department of Music, NTNU. \\
 \years{08/2018--2019}\textsc{Visiting Lecturer}. C4DM, School of EECS, QMUL. \\
 \years{10/2017--07/2018}\textsc{Postdoctoral Research Assistant}. C4DM, School of EECS, QMUL. \\
 \years{07/2015--09/2017}\textsc{Postdoctoral Fellow}. Center for Music Technology (GTCMT) | Digital Media Program, Georgia Tech. \\
@@ -187,9 +188,10 @@ Dissertation: \emph{Interfaces for Sketching Musical Compositions}.\\
 \noindent
 
 \subsection*{Research Grants, Honors \& Awards}
-\years{2019} \textsc{Travel grant for European research and promotion} (30,000 NOK). NTNU, Trondheim, Norway.\\
-\years{2018--2021} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
-\years{2017} NCWIT Engagement Excellence Award (\$5,000 cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
+\years{2019b} \textsc{Web Audio Conference 2019 Best Paper Award}. NTNU, Trondheim, Norway.\\
+\years{2019a} \textsc{Travel grant for European research and promotion} (30,000 NOK, approx. 3,000 \euro). NTNU, Trondheim, Norway.\\
+\years{2018--2021} \textsc{3-year Startup Grant (Startpakke)} (250,000 NOK, approx. 25,000 \euro), awarded to women in permanent academic positions in a scientific field with underrepresentation of women. NTNU, Trondheim, Norway.\\
+\years{2017} NCWIT Engagement Excellence Award (5,000 \$ cash award) to Greg Hendler, Léa Ikkache, Brandon Westergaard, Anna Xambó, Doug Edwards, Brian Magerko, and Jason Freeman (Earsketch), Georgia Tech.\\
 \years{2016}\textsc{Women in Music Information Retrieval (WiMIR) grant}, awarded conference fee waiver to attend the ISMIR 2016 conference. New York University (NYU), New York.\\
 \years{10/2010--07/2013}\textsc{3-year Fully-Funded Full-Time OU PhD scholarship}. The Open University, Milton Keynes, UK.\\
 \years{03/2010--06/2010}\textsc{4-month Fully-Funded OU Visiting Research Studentship}. The Open University, Milton Keynes, UK.
@@ -211,8 +213,8 @@ Funding body: Fundació Caixa de Sabadell. \\
 Project: ``Crossmedia infantil: Estudio sobre las nuevas tecnologías y la comunicación audiovisual en la escuela infantil y primaria (Crossmedia for Children: New Technologies and Audiovisual Communication in Primary Education)''.\\
 Role: PI. \\
 Collaborators: Eladi Martos (Co-PI), UB. \\
-Total Dollar Amount: \$3,300\\
-Candidate’s Share: 50\% (\$1,650)
+Total Euro Amount: 3,000 \euro \\
+Candidate’s Share: 50\% (1,500 \euro)
 
 \subsection*{Collaborator}
 
@@ -222,16 +224,19 @@ Project: ``Collaborative Research: Mixing Learning Experiences for Computer Prog
 Organization: Georgia Tech Research Corporation. \\
 Role: Postdoctoral Fellow and Co-Writer of the grant proposal. \\
 Collaborators: Brian Magerko (PI), Jason Freeman (Co-PI), Mike Horn (Co-PI).\\
-Total Dollar Amount: \$2,517,690.00
+Total Dollar Amount: 2,517,690.00 \$
 
 \subsection*{Fundraiser}
 
+\years{2019}\textsc{Web Audio Conference 2019} \\
+Role: Conference chair. \\
+Total Fundraised Norwegian Krone Amount: 120,000 NOK (Approx. 12,000 \euro)\\[.1cm]
 \years{2017--2018}\textsc{Female Laptop Orchestra + WoNoMute +YSWN + Sonora: seminar and concert at SARC} \\
 Role: Co-organizer and participant of the event. \\
-Total Fundraised British Pound Amount: \textsterling2,000\\[.1cm]
+Total Fundraised British Pound Amount: 2,000 \textsterling\\[.1cm]
 \years{05/2016--05/2017}\textsc{Women in Music Tech} \\
 Role: Co-Founder \& Co-Chair of the organization. \\
-Total Fundraised Dollar Amount: \$11,450
+Total Fundraised Dollar Amount: 11,450 \$
 %\years{08/2016--05/2017}\emph{2016-2017 Academic Year}\\
 %Funding body: School of Music, Georgia Tech. \\
 %Total Dollar Amount: \$2,500\\[.1cm]
@@ -261,16 +266,16 @@ Funding body: Departament de Cultura de la Generalitat de Catalunya (Department 
 Project: ``Transdata Pr.''.  \\
 Role: Creator, Video Editor \& Director.\\
 Collaborators: Gerard Roma (music), Oscar Abril Ascaso (essay). \\
-Total Dollar Amount: \$3,300 \\ 
-Candidate’s Share: 50\% (\$1,650)\\
+Total Euro Amount: 3,000 \euro\\ 
+Candidate’s Share: 50\% (1,500 \euro)\\
 
 \years{09/1998--08/1999}\textsc{Audiovisual production grant} \\
 Funding body: Departament de Cultura de la Generalitat de Catalunya (Department of Culture of Catalan Government).\\
 Project: ``Mitösömä''.  \\
 Role: Creator, Animation Editor \& Director.\\
 Collaborators: Gerard Roma (music). \\
-Grant Amount: 3,000€ (\$3,335) \\
-Candidate’s Share: 50\% (\$1,650)
+Total Euro Amount: 3,000 \euro\\
+Candidate’s Share: 50\% (1,500 \euro)
 
 
 
@@ -280,7 +285,7 @@ Candidate’s Share: 50\% (\$1,650)
 \textbullet \- \href{https://scholar.google.com/citations?user=yi3WXM8AAAAJ}{Scholar Google}\\
 \textbullet \- \href{http://oro.open.ac.uk/view/person/ax22.html}{Open Research Online}\\
 \textbullet \- \href{http://open.academia.edu/AnnaXambo}{Academia.edu}\\
-\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\[1.2cm]%hack
+\textbullet \- \href{http://www.researchgate.net/profile/Anna_Xambo}{ResearchGate}\\%[1.2cm]%hack
 
 \section*{Publications}
 \noindent
@@ -288,7 +293,8 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Books}
 \noindent
 
-\years{2019}Queiroz, M., \textbf{Xambó, A.} (2019). \emph{Proceedings of the International Conference on New Interfaces for Musical Expression}. UFRGS. ISSN 2220-4806.\\
+\years{2020}\textbf{Xambó, A.},  Martín, S. R., Roma, G. (eds.) (in preparation). \emph{Proceedings of the International Web Audio Conference}. NTNU. ISSN: 2663-5844.\\
+\years{2019}Queiroz, M., \textbf{Xambó, A.} (eds.) (2019). \emph{Proceedings of the International Conference on New Interfaces for Musical Expression}. UFRGS. ISSN 2220-4806.\\
 \years{2004}\textbf{Xambó, A.} (2004). \emph{Herramientas De Diseño Digital / Digital Design Tools}. Madrid: Anaya-Multimedia. Editor: Eugenio Tuya Feijoo. ISBN 8441516979.
 
 \subsection*{Peer-Reviewed Book Chapters}
@@ -307,12 +313,12 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2017b}Jewitt, C., Price, S., \textbf{Xambó, A.} (2017). “Conceptualising and Researching the Body in Digital Contexts: Towards New Methodological Conversations Across the Arts and Social Sciences". \emph{Qualitative Research}, 17(1), pp. 37--53.\\
 \years{2017a}Jewitt, C., \textbf{Xambó, A.}, Price, S. (2017). “Exploring Methodological Innovation in the Social Sciences: The Body in Digital Environments and the Arts". \emph{International Journal of Social Research Methodology},  20(1), pp. 105--120.\\
 \years{2013b}\textbf{Xambó, A.}, Hornecker, E., Marshall, P., Jordà, S., Dobbyn, C., Laney, R. (2013). “Let's Jam the Reactable: Peer Learning during Musical Improvisation with a Tabletop Tangible Interface". \emph{ACM Transactions on Computer-Human Interaction}, 20(6), pp. 36:1--36:34.\\
-\years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E., Herrera, P. (2013). “Semantic Audio Content-based Music Recommendation and Visualization based on User Preference Examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.
+\years{2013a}Bogdanov, D., Haro, M., Fuhrmann, F., \textbf{Xambó, A.}, Gómez, E., Herrera, P. (2013). “Semantic Audio Content-based Music Recommendation and Visualization based on User Preference Examples". \emph{Information Processing \& Management}, 49(1), pp. 13--33.\\[1.2cm]%hack
 
 \subsection*{Peer-Reviewed Conference Papers}
 \noindent
 
-\years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In Proceedings of the Web Audio Conference 2019 (WAC ’19). Trondheim, Norway.\\
+\years{2019b}\textbf{Xambó, A.}, Støckert, R., Jensenius, A.R. and Saue, S. (2019) ``Facilitating Team-Based Programming Learning with Web Audio''. In Proceedings of the Web Audio Conference 2019 (WAC '19). Trondheim, Norway. \emph{Best Paper Award}.\\
 \years{2019a}\textbf{Xambó, A.}, Saue, S., Jensenius, A.R., Støckert, R., Brandtsegg, Ø. (2019) "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". In Proceedings of the New Interfaces for Musical Expression (NIME ’19). Porto Alegre, Brazil. pp. 216–221.\\
 \years{2018f}Roma, G., \textbf{Xambó, A.}, Green, O., Tremblay, P.A. (2018) "A Javascript Library for Flexible Visualization of Audio Descriptors". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
 \years{2018e}Pauwels, J., \textbf{Xambó, A.}, Roma, G., Barthet, M. Fazekas, G. (2018) "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". In Proceedings of the Web Audio Conference (WAC '18). Berlin, Germany.\\
@@ -366,6 +372,9 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{External}
 \noindent
 
+\years{2019d} \textsc{Oral Presenter} (December 5, 2019). “Facilitating Team-Based Programming Learning with Web Audio". \emph{WAC '19}. 
+\emph{NTNU}, Trondheim, Norway.\\
+\years{2019c} \textsc{Oral Presenter} (November 22, 2019). “Research as Practice / Practice as Research: Real-time Algorithmic Music Experiences and Women in Music Technology". \emph{NOTAM}, Oslo, Norway.\\
 \years{2019b} \textsc{Oral Presenter} together with Jawad, K. and Shrestha, S. (June 20, 2019). “International joint Master's programme in Music, Communication \& Technology: A master for technological humanists". \emph{MA Creative Technologies}. \emph{Filmuniversität  Babelsberg Konrad Wolf}, Potsdam, Germany.\\
 \years{2019a} \textsc{Oral Presenter} (July 5, 2019). "NIME Prototyping in Teams: A Participatory Approach to Teaching Physical Computing". \emph{NIME '19}. Centro cultural, Universidade Federal do Rio Grande do Sol (UFRGS), Porto Alegre, Brazil.\\
 \years{2018e} \textsc{Oral Presenter} together with Pauwels, J.  (September 19, 2018). "Exploring Real-time Visualisations to Support Chord Learning with a Large Music Collection". \emph{WAC '18}. \emph{Technische Universität Berlin}, Berlin, Germany.\\
@@ -454,7 +463,7 @@ Candidate’s Share: 50\% (\$1,650)
 \subsection*{Webinars}
 \noindent
 
-\years{2016} \textbf{Xambó, A.} (October 28, 2016). “Debugging with EarSketch". GTCMT, Georgia Tech, Atlanta, GA, USA.\\
+\years{2016} \textbf{Xambó, A.} (October 28, 2016). “Debugging with EarSketch". GTCMT, Georgia Tech, Atlanta, GA, USA.\\[3cm]%hack
 
 \section*{Discography}
 \noindent
@@ -496,7 +505,7 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2013b}peterMann's selection of \emph{On The Go}'s tracks. (February 3, 2013). RNE Atmósfera.\\
 \years{2013a}peterMann's “og02". (February 2, 2013). Störung Radio 127 on ScannerFM.\\
 \years{2010b}peterMann's “init 10--12". (December 18, 2010). Onda Sonora.\\
-\years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.\\
+\years{2010a}peterMann's “init 2". (April 12, 2010). Sismógrafo.\\[2cm]%hack
 
 \section*{Selected Performances}
 \noindent
@@ -528,12 +537,12 @@ Candidate’s Share: 50\% (\$1,650)
 \years{2017a}Weisling, A., \textbf{Xambó, A.} (February 11, 2017). “Beacon". \emph{Root Signals Festival 2017}. Georgia Southern University. Statesboro, Georgia, United States.\\
 \years{2012}pulso (Roma, G., \textbf{Xambó, A.}). (March 15, 2012). Live coding session. \emph{Live Coding Sessions}. Niu. Barcelona, Spain.\\
 \years{2004}pulso (Roma, G., \textbf{Xambó, A.}). (May 29, 2004). Live. \emph{Minima Festival}. Gandía, Spain.\\
-\years{2002}b4ng (Roma, G., \textbf{Xambó, A.}, Brugos, C., Clarens). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. 
+\years{2002}b4ng (Roma, G., \textbf{Xambó, A.}, Brugos, Clarens). (June 13, 2002). Live. \emph{Sonar Festival}. Barcelona, Spain. 
 
 \section*{Mastering (other's work)}
 \noindent
 
-\years{2018}\emph{Noiselets} [FLAC/MP3 files]. Barcelona: Carpal Tunnel.\\[2cm]%hack
+\years{2018}\emph{Noiselets} [FLAC/MP3 files]. Barcelona: Carpal Tunnel.
 
 \section*{Other Creative Products}
 \noindent
@@ -709,8 +718,9 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \section*{Supervision  \& Mentoring}
 \noindent
 
-\years{08/2018--present}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistant Mari Lesteberg.\\
-\years{01/2018--08/2018}Co-advisor of Tayjo Padmini Vaduru (master student in Computer Science, Queen Mary University of London) of her master project proposal on automated generation of soundscapes using content from Audio Commons. Master thesis title: ``Moodscape Generator: Automated Generation of Soundscapes''.\\
+\years{01/2020--present}Master thesis supervisor of Karolina Jawad (MCT, NTNU). From this work, there is a forthcoming publication at ICLI '20.\\
+\years{08/2018--12/2019}Mentor and advisor of the members of the organization \emph{WoNoMute}, including the co-chair and research assistant Karolina Jawad, and the research assistants Mari Lesteberg and Ane Bjerkan.\\
+\years{01/2018--08/2018}Master thesis co-advisor of Tayjo Padmini Vaduru (Computer Science, QMUL). Master thesis title: ``Moodscape Generator: Automated Generation of Soundscapes''.\\
 \years{05/2016--12/2017}Mentor and advisor of the members of the student-led organization \emph{Women in Music Tech}, including the chair of the organization, Léa Ikkache, the editor-in-chief of the newsletter Amruta Vidwans, and other new members, such as Jyoti Narang.\\
 \years{09/2015--05/2016}Co-advisor of Marc Huet and Travis Gasque (master's students in Digital Media, School of Literature, Media, and Communication) and Anna Weisling (PhD student in Digital Media, School of LMC) for their graduate design project TuneTable. This work has been part of Brian Magerko’s Digital Media studio course at Georgia Tech. From this work we have published at TEI '17 (see Peer-Reviewed Conference Papers) and we have informed a successful and competitive NSF-funded grant (Advancing Informal STEM Learning Grant).\\
 \years{09/2015--05/2017}Co-advisor of Pratik Shah (master student in Human-Centered Computing, School of Interactive Computing) with the research and design on adding collaborative features to EarSketch, an online platform for learning code by making music. This work has been part of the design and development of the NSF-funded project EarSketch, led by Jason Freeman. From this work we have published at the conferences ICLI '16 and AM '17, and also at the AES journal in 2018 (see Peer-Reviewed Conference Papers).
@@ -738,8 +748,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Blogging}
 \noindent
 
-\years{09/2018--present}\href{http://wonomute.no}{Women Nordic Music Technology}, the website and blog of the WoNoMute organization. Co-Creator and Coordinator.\\ 
-\years{08/2018--present}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Co-Coordinator.\\ 
+\years{09/2018--12/2019}\href{http://wonomute.no}{Women Nordic Music Technology}, the website and blog of the WoNoMute organization. Co-Creator and Coordinator.\\ 
+\years{08/2018--12/2019}\href{https://mct-master.github.io}{MCT master blog}, the blog of the MCT master. Co-Creator and Co-Coordinator.\\ 
 \years{05/2017--07/2018}\href{https://www.audiocommons.org}{Audio Commons}, the blog of the EU-funded project Audio Commons. Coordinator, Reviewer and Author.\\ 
 \years{10/2016--present}\href{http://annaxambo.me/blog}{Anna Xambó's Blog}, the blog of my personal website. Creator and Author.\\ 
 \years{05/2016--12/2017}\href{http://womeninmusictech.gatech.edu}{Women in Music Tech}, the newsletter of the Women in Music Tech organization. Co-Creator, Coordinator, Reviewer and Author.\\ 
@@ -766,8 +776,8 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Academic Programme Leader}
 \noindent
 
-\years{01/2019--present}\textsc{MCT Programme Study Leader} Department of Music, NTNU.\\
-\years{01/2019--present}\textsc{MCT Programme Council Leader}, Department of Music, NTNU.
+\years{01/2019--12/2019}\textsc{MCT Programme Study Leader} Department of Music, NTNU.\\
+\years{01/2019--12/2019}\textsc{MCT Programme Council Leader}, Department of Music, NTNU.
 
 
 \subsection*{Fellow}
@@ -779,9 +789,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \subsection*{Academic Chair / Committee Member / Conference Chair}
 \noindent
 
+\years{2020}\textsc{Poster Chair}. \emph{The 1st International Workshop on the Internet of Sounds}, 27th FRUCT Conference, University of Trento, Italy.\\ 
 \years{2019f}\textsc{Programme Committee Member}. \emph{ACM Tangible, Embedded and Embodied Interaction 2020}. Sydney, Australia.\\ 
 \years{2019e--present}\textsc{WiNIME officer}. \emph{International Conference of New Interfaces for Musical Expression}.\\ 
-\years{2019d}\textsc{Sponsorship Chair \& Program Co-Chair}. \emph{International Conference of Live Interfaces 2020}. Trondheim, Norway.\\ 
+\years{2019d}\textsc{Program Co-Chair}. \emph{International Conference of Live Interfaces 2020}. Trondheim, Norway.\\ 
 \years{2019c}\textsc{General Co-Chair}. \emph{Web Audio Conference 2019}. Trondheim, Norway.\\ 
 \years{2019b}\textsc{Paper Co-Chair \& Session Chair}. \emph{New Interfaces for Musical Expression 2019}. Porto Alegre, Brazil.\\ 
 \years{2019a}\textsc{Programme Committee Member}. \emph{ACM Creativity \& Cognition 2019}. San Diego, USA.\\ 
@@ -806,10 +817,10 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2017}\emph{ACM Innovation and Technology in Computer Science Education} (2017).\\
 \years{2017}\emph{Co-Creation Workshop at International Conference on Computational Creativity} (2017).\\
 \years{2017--2018}\emph{International Computer Music Conference -- ICMC Music} (2017, 2018).\\
-\years{2016}\emph{International Conference on Live Interfaces} (2016).\\
+\years{2016, 2020}\emph{International Conference on Live Interfaces} (2016, 2020).\\
 \years{2016}\emph{ISSTA International Festival and Conference on Sound in the Arts, Science and Technology} (2016).\\
 \years{2016--2019}\emph{Web Audio Conference} (2016--2019).\\
-\years{2015--2019}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2019).\\
+\years{2015--2020}\emph{ACM Special Interest Group on Computer-Human Interaction} (2015--2020).\\
 \years{2013c}\emph{IEEE Interactive Tabletops and Surfaces} (2013).\\
 \years{2012--2018}\emph{ACM Designing Interactive Systems} (2012, 2016, 2018).\\
 \years{2012--2018}\emph{ACM Tangible, Embedded and Embodied Interaction} (2012--2020).\\
@@ -828,6 +839,11 @@ Role: Co-creation of syllabus, creation of content, instruction and assessment.\
 \years{2016b}\emph{Interacting with Computers}. Oxford Journals.\\
 \years{2016a}\emph{Qualitative Research}. Sage Publications.\\
 \years{2015}\emph{International Journal of Human-Computer Studies}. Elsevier.
+
+\subsection*{Book Reviewer}
+\noindent
+
+\years{2020}\emph{Routledge}.\\
 
 \subsection*{Panelist}
 \noindent
@@ -866,7 +882,7 @@ Collaborators: Jason Freeman (coordinator), Gerard Roma.
 
 \subsection*{Entrepreneurship}
 \noindent
-\years{08/2018--present}\emph{Women Nordic Music Technology (WoNoMute)}, NTNU, Trondheim, Norway. \\
+\years{08/2018--12/2019}\emph{Women Nordic Music Technology (WoNoMute)}, NTNU, Trondheim, Norway. \\
 Co-Founder and Chair of \emph{WoNoMute}, an organization at NTNU in collaboration with University of Oslo (UiO) that aims to promote and connect the work of women in music tech at local, national and international levels. This includes the curation and organization of a monthly seminar series of talks, the creation of an online archive and generation of related content to give more visibility to the work of women in music tech.\\
 \years{2009--present}\emph{Carpal Tunnel}, Barcelona, Spain.\\
 Co-Founder of the online music record label Carpal Tunnel.\\
