--- a/Xambo.brief.CV.tex
+++ b/Xambo.brief.CV.tex
@@ -95,7 +95,7 @@ bookmarks, colorlinks, breaklinks,
 \pagenumbering{gobble} % this suppresses page numbering
 
 {\textbf{Anna Xambó}}\\ 
-Associate Professor in Music Technology, Department of Music, NTNU -- \href{http://annaxambo.me/}{annaxambo.me}\\
+Senior Lecturer in Music and Audio Technology, Faculty of Computing, Engineering and Media, DMU -- \href{http://annaxambo.me/}{annaxambo.me}\\
 
 {\textbf{Education}}\\
 \textsc{PhD}, Music computing \& HCI, The Open University, 2015.\\
@@ -103,8 +103,8 @@ MSc, Information, Communication and Audiovisual Media Technologies, Universitat 
 BA, MA, Social and Cultural Anthropology, Universitat de Barcelona, 1996.\\
 
 {\textbf{Employment}}\\
-Associate Professor, NTNU, 2018--present. I am teaching graduate courses in audio programming, human-computer interaction, physical computing and sonification. I am co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--present). I am the Music, Communication and Technology (NTNU/UiO)'s master programme council leader and MCT programme study leader at NTNU. I am Associate Fellow of the Higher Education Academy.\\
-I have been a visiting lecturer and postdoc at Queen Mary University of London (2017--2019) and postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, UCL Institute of Education.
+Senior Lecturer, DMU, 2020--present. I am teaching undergraduate courses in audio electronics, studio technology and DSP. 
+I have been associate professor, NTNU (2018--2019) where I also was MCT master programme council leader and MCT programme study leader at NTNU, visiting lecturer and postdoc at Queen Mary University of London (2017--2019) and postdoc at Georgia Tech (2015--2017). Also, I have been co-founder and chair of the organization Women Nordic Music Technology (WoNoMute) (2018--2019) and co-founder and co-chair of the organization Women in Music Tech at Georgia Tech (2016--2017). From 2013 to 2014, I was a research fellow at the London Knowledge Lab, UCL Institute of Education.
 I have been working since 2000 as interaction designer, web designer and web developer with strong background on Internet technologies. I have been employee in companies for 10 years (2000--2010) as well as co-founder of my own interactive media studio (2004--2010).\\
 
 {\textbf{Grants/Awards}} from NTNU (2018--2021, 2019); Sonic Arts Research Center (2018); NCWIT (2017); National Science Foundation AISL (2016); Women in Music Information Retrieval (2016); The Open University (2010--2013, 2010); Fundació Caixa de Sabadell (2003--2004); and Generalitat de Catalunya (2001--2002, 1998--1999).\\
